--- a/BSK_Encryption/MainWindow.xaml
+++ b/BSK_Encryption/MainWindow.xaml
@@ -94,10 +94,10 @@
                 <StackPanel Grid.Row="2" Grid.Column="0" Orientation="Horizontal">
                     <Label>Cipher Mode:</Label>
                     <ComboBox SelectedIndex="{Binding Cipher ,Converter={StaticResource CipherConverter}}">
-                        <ComboBoxItem IsSelected="True" >ECB</ComboBoxItem>
-                        <ComboBoxItem >CBC</ComboBoxItem>
-                        <ComboBoxItem >CFB</ComboBoxItem>
+                        <ComboBoxItem IsSelected="True" >CBC</ComboBoxItem>
+                        <ComboBoxItem >ECB</ComboBoxItem>
                         <ComboBoxItem >OFB</ComboBoxItem>
+                        <ComboBoxItem >CFB</ComboBoxItem>
                     </ComboBox>
                     <Label>Block Size:</Label>
                     <ComboBox SelectedValue="{Binding BlockSize , Converter={StaticResource BlockConverter}}">
@@ -114,7 +114,7 @@
         </GroupBox>
 
         <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="10">
-            <Button>Start</Button>
+            <Button Click="Start_Click">Start</Button>
         </StackPanel>
     </Grid>
 </Window>
