--- a/BSK_Encryption/Windows/EncrypteWindow.xaml
+++ b/BSK_Encryption/Windows/EncrypteWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="BSK_Encryption.MainWindow"
+﻿<Window x:Class="BSK_Encryption.Windows.EncrypteWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,7 +7,7 @@
         xmlns:c="clr-namespace:BSK_Encryption.Converters"
         xmlns:valid="clr-namespace:BSK_Encryption.Validators"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="600" MinHeight="350" MaxHeight="350"  MinWidth="400" MaxWidth="600">
+        Title="BSK Project 1 - Encrypte" Height="350" Width="600" MinHeight="350" MaxHeight="350"  MinWidth="400" MaxWidth="600">
     <Window.Resources>
         <c:CipherConverter x:Key="CipherConverter"/>
         <c:BlockConverter x:Key="BlockConverter"/>
@@ -92,19 +92,26 @@
                 </StackPanel>
 
                 <StackPanel Grid.Row="2" Grid.Column="0" Orientation="Horizontal">
-                    <Label>Cipher Mode:</Label>
-                    <ComboBox SelectedIndex="{Binding Cipher ,Converter={StaticResource CipherConverter}}">
+                    <Label Margin="5">Cipher Mode:</Label>
+                    <ComboBox Margin="5"
+                              SelectedIndex="{Binding Cipher ,Converter={StaticResource CipherConverter}}">
                         <ComboBoxItem IsSelected="True" >CBC</ComboBoxItem>
                         <ComboBoxItem >ECB</ComboBoxItem>
                         <ComboBoxItem >OFB</ComboBoxItem>
                         <ComboBoxItem >CFB</ComboBoxItem>
                     </ComboBox>
-                    <Label>Block Size:</Label>
-                    <ComboBox SelectedValue="{Binding BlockSize , Converter={StaticResource BlockConverter}}">
+                    <Label Margin="5">Block Size:</Label>
+                    <ComboBox Margin="5" 
+                              SelectedValue="{Binding BlockSize , Converter={StaticResource BlockConverter}}">
                         <ComboBoxItem IsSelected="True" >128</ComboBoxItem>
                         <ComboBoxItem >192</ComboBoxItem>
                         <ComboBoxItem >256</ComboBoxItem>
                     </ComboBox>
+                    <TextBlock Margin="10" >
+                         Recipient:
+                        <Run Text="{Binding UserNames, Mode=OneWay}"></Run>
+                    </TextBlock>
+                    <Button Margin="5" Click="AddUsers_Click">Add Users</Button>
                 </StackPanel>
             </Grid>
         </GroupBox>
