--- a/Proj1/BSK_Encryption/Windows/RegisterWindow.xaml
+++ b/Proj1/BSK_Encryption/Windows/RegisterWindow.xaml
@@ -23,13 +23,13 @@
             <StackPanel>
                 <StackPanel  Margin="3" Orientation="Horizontal">
                     <Label Margin="3">Username:</Label>
-                    <TextBox Width="Auto" MinWidth="100" Margin="3" VerticalAlignment="Center"></TextBox>
+                    <TextBox  x:Name="Username" Width="Auto" MinWidth="100" Margin="3" VerticalAlignment="Center"></TextBox>
                 </StackPanel>
                 <StackPanel  Margin="3" Orientation="Horizontal">
                     <Label Margin="3">Password:</Label>
-                    <PasswordBox Width="Auto" MinWidth="100" Margin="3" VerticalAlignment="Center"></PasswordBox>
+                    <PasswordBox x:Name="Password" Width="Auto" MinWidth="100" Margin="3" VerticalAlignment="Center"></PasswordBox>
                 </StackPanel>
-                <Button Margin="10">Submit</Button>
+                <Button Margin="10" Click="Submit_Click">Submit</Button>
             </StackPanel>
         </GroupBox>
     </Grid>
