--- a/Proj2/Proj2/Login.xaml
+++ b/Proj2/Proj2/Login.xaml
@@ -10,8 +10,8 @@
         <Label Content="Podaj nawę użytkownika i hasło" HorizontalAlignment="Left" HorizontalContentAlignment="Center" Margin="28,10,0,0" VerticalAlignment="Top" Width="243"/>
         <Label Content="Login" HorizontalAlignment="Left" Margin="68,82,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="login" HorizontalAlignment="Left" Height="23" Margin="68,113,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Label x:Name="password" Content="Hasło" HorizontalAlignment="Left" Margin="68,141,0,0" VerticalAlignment="Top"/>
-        <PasswordBox HorizontalAlignment="Left" Margin="68,172,0,0" VerticalAlignment="Top" Width="120"/>
+        <Label  Content="Hasło" HorizontalAlignment="Left" Margin="68,141,0,0" VerticalAlignment="Top"/>
+        <PasswordBox x:Name="password" HorizontalAlignment="Left" Margin="68,172,0,0" VerticalAlignment="Top" Width="120"/>
         <Button Content="Zaloguj" HorizontalAlignment="Left" Margin="113,216,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
 
     </Grid>
