--- a/Proj2/Proj2/EditOrder.xaml
+++ b/Proj2/Proj2/EditOrder.xaml
@@ -9,11 +9,11 @@
     <Grid>
         <Label Content="Imie i Nazwisko" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
         <Label Content="Adres" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="107,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="175"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="55,41,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="138"/>
-        <Button Content="Zapisz" HorizontalAlignment="Left" Margin="10,103,0,0" VerticalAlignment="Top" Width="75"/>
+        <TextBox x:Name="nam" HorizontalAlignment="Left" Height="23" Margin="107,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="175" />
+        <TextBox x:Name="addr" HorizontalAlignment="Left" Height="23" Margin="55,41,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="138" />
+        <Button Content="Zapisz" HorizontalAlignment="Left" Margin="10,103,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click" />
         <Label Content="Status" HorizontalAlignment="Left" Margin="12,72,0,0" VerticalAlignment="Top"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="59,72,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="160"/>
+        <TextBox x:Name="st" HorizontalAlignment="Left" Height="23" Margin="59,72,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="160" />
 
     </Grid>
 </Window>
